<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo_Principal"
    tools:context=".RegistroActivity">


    <EditText
        android:id="@+id/editTextNombre"
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:layout_margin="16dp"
        android:autofillHints="name"
        android:hint="@string/ingresa_el_nombre"
        android:inputType="textPersonName"
        android:textColorHint="@color/black"
        android:backgroundTint="@color/fondo_botones"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.163"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.16000003"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/editTextCorreo"
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:layout_margin="16dp"
        android:layout_marginTop="92dp"
        android:autofillHints="email"
        android:hint="@string/ingresa_el_correo_electronico"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/black"
        android:backgroundTint="@color/fondo_botones"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.344"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNombre"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/editTextContraseña"
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:layout_margin="16dp"
        android:autofillHints="password"
        android:hint="@string/ingresa_la_contrase_a"
        android:inputType="textPassword"
        android:textColorHint="@color/black"
        android:backgroundTint="@color/fondo_botones"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerCurso"
        app:layout_constraintVertical_bias="0.110000014"
        tools:ignore="TouchTargetSizeCheck" />


    <EditText
        android:id="@+id/editTextConfirmarContraseña"
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:layout_margin="16dp"
        android:layout_marginStart="16dp"
        android:autofillHints="password"
        android:hint="@string/ingrese_de_nuevo_la_contrase_a"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:backgroundTint="@color/fondo_botones"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.644"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextContraseña"
        app:layout_constraintVertical_bias="0.050000012"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/buttonRegistrar"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginBottom="212dp"
        android:background="@drawable/boton_redondeado"
        android:text="@string/registrar"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="@+id/editTextContraseña"
        app:layout_constraintStart_toStartOf="@+id/editTextNombre"
        app:layout_constraintTop_toBottomOf="@+id/editTextConfirmarContraseña"
        tools:ignore="TextContrastCheck" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="70dp"
        android:layout_height="30dp"
        android:text="@string/curso"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.41000003" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="70dp"
        android:layout_height="30dp"
        android:layout_marginEnd="60dp"
        android:text="@string/clase"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView5"
        app:layout_constraintEnd_toStartOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.0" />

    <Spinner
        android:id="@+id/spinnerCurso"
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/spinner_border"
        android:popupBackground="@color/fondo_Principal"
        app:layout_constraintEnd_toEndOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <Spinner
        android:id="@+id/spinnerClase"
        android:layout_width="120dp"
        android:layout_height="0dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/spinner_border"
        android:popupBackground="@color/fondo_Principal"
        app:layout_constraintBottom_toBottomOf="@+id/spinnerCurso"
        app:layout_constraintEnd_toStartOf="@+id/spinnerCurso"
        app:layout_constraintTop_toTopOf="@+id/spinnerCurso"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <Spinner
        android:id="@+id/spinnerTurno"
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/spinner_border"
        android:popupBackground="@color/fondo_Principal"
        app:layout_constraintBottom_toBottomOf="@+id/spinnerCurso"
        app:layout_constraintStart_toEndOf="@+id/spinnerCurso"
        app:layout_constraintTop_toTopOf="@+id/spinnerCurso"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />


    <TextView
        android:id="@+id/Turno"
        android:layout_width="70dp"
        android:layout_height="30dp"
        android:layout_marginStart="40dp"
        android:text="@string/turno"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="@+id/textView5" />



</androidx.constraintlayout.widget.ConstraintLayout>